// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test BaseInfoFormItem should match snapshot 1`] = `
<Fragment>
  <FormItemNoLabel
    name="workflow_subject"
    rules={
      [
        {
          "message": "请输入工单名称",
          "required": true,
        },
        {
          "validator": [Function],
        },
        {
          "max": 59,
        },
      ]
    }
  >
    <FormInputBotBorder
      className="workflow-name-input-wrapper"
      placeholder="请输入工单名称"
    />
  </FormItemNoLabel>
  <FormItemLabel
    className="workflow-base-info-desc-form-item"
    label="工单描述"
    name="desc"
  >
    <ForwardRef(InternalTextArea)
      autoSize={
        {
          "maxRows": 10,
          "minRows": 8,
        }
      }
      maxLength={3000}
      placeholder="点此添加工单描述（选填）"
      showCount={true}
    />
  </FormItemLabel>
</Fragment>
`;

exports[`test BaseInfoFormItem should match snapshot with slot 1`] = `
<Fragment>
  <FormItemNoLabel
    name="workflow_subject"
    rules={
      [
        {
          "message": "请输入工单名称",
          "required": true,
        },
        {
          "validator": [Function],
        },
        {
          "max": 59,
        },
      ]
    }
  >
    <FormInputBotBorder
      className="workflow-name-input-wrapper"
      placeholder="请输入工单名称"
    />
  </FormItemNoLabel>
  <div>
     slot 
  </div>
  <FormItemLabel
    className="workflow-base-info-desc-form-item"
    label="工单描述"
    name="desc"
  >
    <ForwardRef(InternalTextArea)
      autoSize={
        {
          "maxRows": 10,
          "minRows": 8,
        }
      }
      maxLength={3000}
      placeholder="点此添加工单描述（选填）"
      showCount={true}
    />
  </FormItemLabel>
</Fragment>
`;
